--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coding-challenge",
+  "name": "divercity-coding-challenge",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
